# forum-bookmark-manager

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  start_manager.bat  stop_manager.bat
.github/workflows/: ci.yml
config/: settings.example.toml
docs/: RELEASE.md
docs/superpowers/plans/: 2026-05-13-forum-bookmark-manager.md
docs/superpowers/specs/: 2026-05-13-forum-bookmark-manager-design.md
src/forum_bookmark_manager/: __init__.py  annotator.py  clash.py  cli.py  crawler.py  models.py  parser.py  repository.py  routing.py  selector_profile.py  settings.py  tab_registry.py  web.py
src/forum_bookmark_manager/static/: app.js  index.html  styles.css
tests/: test_annotator.py  test_clash.py  test_cli.py  test_crawler.py  test_models.py  test_parser.py  test_repository.py  test_selector_profile.py  test_tab_registry.py  test_web.py
